dev/cloudcli/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: web
  namespace: cloudcli
  annotations:
    external-dns.alpha.kubernetes.io/target: 202.215.58.76
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cloudcli.mtaku3.com`)
      kind: Rule
      services:
        - name: cloudcli
          port: http
      middlewares:
        - name: tinyauth
          namespace: traefik
  tls:
    secretName: web-tls-cert
